--- a/apps/file-index/views/logger.hbs
+++ b/apps/file-index/views/logger.hbs
@@ -1,23 +1,29 @@
 <html>
   <head>
-    <meta charset='utf-8' />
-    <title>
-      Live log
-    </title>
+    <meta charset="utf-8" />
+    <title>Live log</title>
   </head>
   <body>
-    <h1>
-      Live log
-    </h1>
-    <ul id='messages'></ul>
+    <h1>Live log</h1>
+    <ul id="messages"></ul>
 
-    <script src='https://cdn.socket.io/4.8.1/socket.io.min.js'></script>
+    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
     <script>
-      const socket = io(); socket.on('logging', (data) => { addMessage(data) })
-      function addMessage(message) { var text =
-      document.createTextNode(message), el = document.createElement('li'),
-      messages = document.getElementById('messages'); el.appendChild(text);
-      messages.appendChild(el); }
+      const socket = io();
+
+      socket.on('logging', (data) => {
+        addMessage(data);
+      });
+
+      function addMessage(message) {
+        var text = document.createTextNode(message);
+
+        el = document.createElement('li');
+        messages = document.getElementById('messages');
+
+        el.appendChild(text);
+        messages.appendChild(el);
+      }
     </script>
   </body>
 </html>
